<resources>
    <string name="app_name">Product Cart</string>
    <string name="no_product_add">No Product Add</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="discount">Discount</string>
    <string name="image">Image</string>
    <string name="product_add">Product Add</string>
    <string name="save">Save</string>
    <string name="choose">Choose</string>
    <string name="choose_image">Choose Image</string>
    <string name="product_view">Product View</string>
    <string name="title_activity_product_view">ProductViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="product_update">Product Update</string>
</resources>